Added styles to the body background color and create a box that is centered.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
 	<head>
 		<title> SUBLIME TRICKS </title>
+		<style>
+			body{
+				background:black;
+			}
+
+			#wrap{
+				border:solid 1px white;
+				width:960px;
+				margin: 0 auto;
+				height:90vh;
+			}
+		</style>
 	</head>
 	<body>
+
+		<div id="wrap"></div>
 
 	</body>
 </html>
